# api/subscription/v1/subscription.pb.validate.go
@@ -171,6 +171,8 @@ func (m *ListPlansRequest) validate(all bool) error {
 
 	var errors []error
 
+	// no validation rules for AppId
+
 	if len(errors) > 0 {
 		return ListPlansRequestMultiError(errors)
 	}
